Upgrade to SOP/manifest v2.5
